--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,30 +5,51 @@
     box-sizing: border-box;
 }
 
+:root{
+	--cor-principal-dark: #22262c;
+	--cor-texto-dark: white;
+	--cor-secundaria-dark: #2d3138;
+	--cor-primaria-light: white;
+	--cor-texto-light: black;
+	--cor-secundaria-light: #f1f1f1;
+}
+
+
 body {
-	color: white;
-	background-color: #22262c;
+	color: var(--cor-texto-dark);
+	background-color: var(--cor-principal-dark);
 	font-family: "Inter", sans-serif;
 }
 
 .mensage {
-	background-color:#2d3138 ;
+	background-color:var(--cor-secundaria-dark) ;
 	font-size: 16px;
 	text-align: center;
 	padding: 15px;
 }
 
+.inicio_barra{
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.inicio_barra{
+	cursor: pointer;
+	font-size: 24px;
+}
+
 header {
 	position: sticky;
 	top: -5px;
-	background-color: #22262c;
+	background-color: var(--cor-principal-dark);
 	padding: 10px 30px 0 30px;
 	width: 100%;
 }
 
 header a {
 	position: relative;
-	color: #fff;
+	color: var(--cor-texto-dark);
 	text-decoration: none; 
 }
 
@@ -39,7 +60,7 @@ header a:before {
 	height: 1px;
 	bottom: 0;
 	left: 0;
-	background-color: white;
+	background-color: var(--cor-texto-dark);
 	visibility: hidden;
 	-webkit-transform: scaleX(0);
 	transform: scaleX(0);
@@ -60,6 +81,10 @@ header .inicio {
 	align-items: center;
 }
 
+.botao{
+	cursor: pointer;
+}
+
 header .inicio .nome {
 	font-size: 28px;
 }
@@ -72,7 +97,7 @@ header .inicio .navegacao {
 
 header .inicio .navegacao .navegacao_botao {
     text-decoration: none;
-    color: white;
+    color: var(--cor-texto-dark);
     font-size: 16px;
     text-transform: uppercase ;
 }
@@ -91,13 +116,13 @@ header .inicio .utilidades button {
 	border-radius: 8px;
 	background-color: #22262c;
 	border: none;
-	color: white;
+	color: var(--cor-texto-dark);
 	font-size: 18px;
 }
 
 #icon{
     font-size: 17px;
-    color: white;
+    color: var(--cor-texto-dark);
 }
 
 .titulo{
@@ -105,7 +130,7 @@ header .inicio .utilidades button {
     margin: 20px 0 20px 0;
 }
 .marcas{
-    background-color: white;
+    background-color: var(--cor-texto-dark);
     color: black;
     text-align: center;
     display: inline;
@@ -113,10 +138,152 @@ header .inicio .utilidades button {
     border-radius: 8px;
 }
 
+.menu_lateral{
+	width: 00px;
+	min-height: 100vh;
+	position: fixed;
+	top: 0;
+	background-color: #22262c;
+	border-right: solid 2px rgba(255, 255, 255, 0.326);
+	overflow: hidden;
+}
+
+.menu_lateral_back{
+	margin-top: 10px;
+	margin-left: 10px;
+}
+
+.menu_lateral_back i {
+	font-size: 24px;
+}
+.menu_lateral_back button{
+	border: none;
+	background-color: #2d3138;
+	padding: 10px;
+	border-radius: 50%;
+	color: #fff;
+}
+
+.menu_lateral_back span{
+	background-color: #2d3138;
+	border-radius: 50%;
+	padding: 10px;
+}
+	
+.menu_lateral_content{
+	display: flex;
+	flex-direction: column;
+	padding: 24px 0px;
+	width: 100%;
+	margin: 0;
+	transition: 2s;
+}
+
+.menu_lateral a:hover{
+	text-decoration: underline white;
+}
+
+.menu_lateral_content div{
+	display: flex;
+	gap: 15px;
+	align-items: center;
+	border-top: solid 0.1px rgba(255, 255, 255, 0.341);
+	padding: 10px;
+}
+
+.menu_lateral_content img{
+	width: 60px;
+	height: 60px;
+	border-radius: 5px;
+	margin-left:  16px;
+}
+
+.menu_lateral_content a{
+	text-decoration: none;
+	color: white;
+}
+
+.menu_lateral_functions{
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	border-top: solid 0.1px rgba(255, 255, 255, 0.277);
+	border-bottom: solid 0.1px rgba(255, 255, 255, 0.277);
+	padding: 40px 30px;
+}
+.menu_lateral_functions a{
+	text-decoration: none;
+	color: white;
+}
+
+.menu_lateral_other{
+	display: flex;
+	justify-content: left;
+	gap: 20px;
+	align-items: center;
+	height: 80px;
+}
+
+.menu_lateral_other a{
+	text-decoration: none;
+	color: #fff;
+	margin-left: 30px;
+	border-right:solid 0.1px rgba(255, 255, 255, 0.277); 
+	padding-right: 25px;
+}
+
+.menu_lateral_other button{
+	border: none;
+	background-color: transparent;
+	color: white;
+	font-size: 16px;
+}
+
+.menu_carrinho{
+	width: 0px;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	right: 0;
+	background-color: #22262c;
+	text-align: center;
+	overflow: hidden;
+}
+
+.menu_carrinho div button{
+	width: 400px;
+	text-align: center;
+	padding: 12px;
+	border-radius: 30px;
+	border: none;
+	background-color: #434750;
+	color: white;
+	position: absolute;
+	right: 20px;
+	top: 625px;
+	font-size: 16px;
+}
+
+.principal{
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	margin: 90px 0 0 0;
+	text-align: center;
+}
+
+.principal i{
+	font-size: 60px;
+}
+
+.principal p{
+	font-size: 20px;
+}
+
 footer {
 	width: 100%;
 	margin: 0 auto;
-	border-top: solid 1px white;
+	border-top: solid 1px var(--cor-texto-dark);
 }
 
 footer a {
@@ -246,3 +413,11 @@ footer .footer_footer .rodape_esc .rodape_botao {
     width: 300px;
 }
 
+.light body{
+	background-color: var(--cor-primaria-light);
+	color: var(--cor-texto-light); 
+}
+
+.light .author_section .author {
+	background-color: var(--cor-secundaria-light);
+}
