--- a/src/css/index.css
+++ b/src/css/index.css
@@ -68,6 +68,18 @@
 	border-radius: 8px;
 }
 
+.info .info_coluna a {
+	text-decoration: none;
+	color: white;
+}
+
+.info .info_coluna a p{
+	background-color: #343842;
+	padding: 10px;
+	margin-top: -5px;
+	border-radius: 5px;
+}
+
 .author_section .author {
 	width: 87.5rem;
 	margin: 0 auto;
