--- a/src/assets/css/error.css
+++ b/src/assets/css/error.css
@@ -1,24 +1,29 @@
-bofy{
+body {
     height: 80vh;
 }
-.aviso{
+
+.aviso {
     width: 100%;
     height: 100%;
     margin:  10% auto;
 }
-.aviso div{
+
+.aviso div {
     display: flex;
     flex-direction: column;
     gap: 20px;
     justify-content: center;
     align-items: center;
 }
-.aviso div i {
+
+.aviso div .warning {
     font-size: 150px;
 }
-.aviso div p{
+
+.aviso div p {
     font-size: 24px;
 }
-.aviso div img{
+
+.aviso div img {
     width: 400px;
 }
