--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -14,7 +14,8 @@
 	display: flex;
 	height: 32.5rem;
 	justify-content: center;
-	gap: 1.875rem; 
+	gap: 1.875rem;
+	margin-bottom: 3rem;
 }
 
 .shop .shop_content img {
@@ -28,20 +29,27 @@
 	width: 18.75rem;
 }
 
+.shop .shop_content .shop_text h2 {
+	font-size: 24px;
+	text-align: center;
+	vertical-align: center;
+}
+
 .shop .shop_content .shop_text span {
-	color: aqua;
+	color: darkblue;
 	font-size: smaller;
 	text-transform: lowercase;
 }
 
 .shop .shop_content .shop_text button {
-	background-color: #22262c;
+	background-color: var(--cor-secundaria-light);
 	box-shadow: none;
-	border: 2px solid aqua;
+	border: 2px solid darkblue;
 	padding: 12px;
 	border-radius: 5px;
-	color: white;
+	color: var(--cor-texto-light);
 	cursor: pointer;
+	text-align: center;
 }
 
 .shop .shop_content .shop_text .ret {
@@ -70,11 +78,11 @@
 
 .info .info_coluna a {
 	text-decoration: none;
-	color: white;
+	color: var(--cor-texto-light);
 }
 
 .info .info_coluna a p{
-	background-color: #343842;
+	background-color: var(--cor-secundaria-light);
 	padding: 10px;
 	margin-top: -5px;
 	border-radius: 5px;
@@ -83,7 +91,7 @@
 .author_section .author {
 	width: 87.5rem;
 	margin: 0 auto;
-	background-color: #343842;
+	background-color: var(--cor-secundaria-light);
 	padding: 1.875rem 5.625rem;
 	display: flex;
 	gap: 1.875rem;
@@ -93,6 +101,7 @@
 
 .author_section .author .author_content {
 	font-size: 1.875rem;
+	text-align: center;
 }
 
 .author_section .author .bio {
@@ -110,55 +119,4 @@
 .author_section .author .bio_content {
     display: flex;
     flex-direction: column;
-}
-
-.gta {
-	width: 100%;
-	background-color: #343842;
-	height:34.375rem;
-	display: flex;
-	align-items: center;      
-}
-
-.gta .history {
-	display: flex;
-	margin: 0 auto;
-	width: 87.5rem;
-	gap: 3.125rem;
-	justify-content: space-between;
-}
-
-.gta .history_content {
-	display: flex;
-	flex-direction: column;
-	gap: 1.875rem;
-}
-
-.gta .history h3 {
-	font-size: 1.875rem;
-}
-
-.gta .history .history_1 {
-	display: flex;
-	flex-direction: column;
-	gap: 1.25rem;
-}
-
-.gta .history .history_1 img{
-	width: 25rem;
-	height: 18.75rem;
-	object-fit: cover;
-	border-radius:  5px;   
-}
-
-.gta .history .history_2 {
-	display: flex;
-	flex-direction: column;
-	gap: 1.25rem;
-}
-
-.gta .history .history_2 img {
-	width: 25rem;
-	height: 12.5rem;
-	border-radius: 5px;
 }
