--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16,28 +16,18 @@
 
 
 body {
-	color: #FFFFFF;
-	background-color: #22262C;
+	color: var(--cor-texto-light);
+	background-color: var(--cor-principal-light);
 	font-family: "Inter", sans-serif;
 }
 
-.theme_main {
-	background-color: #FFFFFF;
-	color: #000000;
-}
-
-.theme_header {
-	background-color: #FFFFFF;
-	color: #000000;
-}
-
-.theme_footer {
-	background-color: #FFFFFF;
-	color: #000000;
+.dark-theme {
+	color: var(--cor-texto-dark);
+	background-color: var(--cor-principal-dark);
 }
 
 .mensage {
-	background-color:var(--cor-secundaria-dark) ;
+	background-color:var(--cor-secundaria-light) ;
 	font-size: 16px;
 	text-align: center;
 	padding: 15px;
@@ -57,14 +47,14 @@ body {
 header {
 	position: sticky;
 	top: -5px;
-	background-color: #22262C;
+	background-color: var(--cor-primaria-light);
 	padding: 10px 30px 0 30px;
 	width: 100%;
 }
 
 header a {
 	position: relative;
-	color: #FFFFFF;
+	color: var(--cor-texto-light);
 	text-decoration: none; 
 }
 
@@ -75,7 +65,7 @@ header a:before {
 	height: 1px;
 	bottom: 0;
 	left: 0;
-	background-color: #22262C;
+	background-color: var(--cor-texto-light);
 	visibility: hidden;
 	-webkit-transform: scaleX(0);
 	transform: scaleX(0);
@@ -112,7 +102,7 @@ header .inicio .navegacao {
 
 header .inicio .navegacao .navegacao_botao {
     text-decoration: none;
-    color: var(--cor-texto-dark);
+    color: var(--cor-texto-light);
     font-size: 16px;
     text-transform: uppercase ;
 }
@@ -129,15 +119,15 @@ header .inicio .utilidades button {
 	align-items: center;
 	padding: 8px 10px;
 	border-radius: 8px;
-	background-color: #22262c;
+	background-color: var(--cor-primaria-light);
 	border: none;
-	color: var(--cor-texto-dark);
+	color: var(--cor-texto-light);
 	font-size: 18px;
 }
 
 #icon {
     font-size: 17px;
-    color: var(--cor-texto-dark);
+    color: var(--cor-texto-light);
 }
 
 .titulo {
@@ -145,7 +135,7 @@ header .inicio .utilidades button {
     margin: 20px 0 20px 0;
 }
 .marcas {
-    background-color: var(--cor-texto-dark);
+    background-color: var(--cor-texto-light);
     color: black;
     text-align: center;
     display: inline;
@@ -153,152 +143,10 @@ header .inicio .utilidades button {
     border-radius: 8px;
 }
 
-.menu_lateral {
-	width: 0px;
-	min-height: 100vh;
-	position: fixed;
-	top: 0;
-	background-color: #22262c;
-	border-right: solid 2px rgba(255, 255, 255, 0.326);
-	overflow: hidden;
-}
-
-.menu_lateral_back {
-	margin-top: 10px;
-	margin-left: 10px;
-}
-
-.menu_lateral_back i {
-	font-size: 24px;
-}
-.menu_lateral_back button {
-	border: none;
-	background-color: #2d3138;
-	padding: 10px;
-	border-radius: 50%;
-	color: #fff;
-}
-
-.menu_lateral_back span {
-	background-color: #2d3138;
-	border-radius: 50%;
-	padding: 10px;
-}
-	
-.menu_lateral_content {
-	display: flex;
-	flex-direction: column;
-	padding: 24px 0px;
-	width: 100%;
-	margin: 0;
-	transition: 2s;
-}
-
-.menu_lateral a:hover {
-	text-decoration: underline white;
-}
-
-.menu_lateral_content div {
-	display: flex;
-	gap: 15px;
-	align-items: center;
-	border-top: solid 0.1px rgba(255, 255, 255, 0.341);
-	padding: 10px;
-}
-
-.menu_lateral_content img {
-	width: 60px;
-	height: 60px;
-	border-radius: 5px;
-	margin-left:  16px;
-}
-
-.menu_lateral_content a {
-	text-decoration: none;
-	color: white;
-}
-
-.menu_lateral_functions {
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
-	border-top: solid 0.1px rgba(255, 255, 255, 0.277);
-	border-bottom: solid 0.1px rgba(255, 255, 255, 0.277);
-	padding: 40px 30px;
-}
-.menu_lateral_functions a {
-	text-decoration: none;
-	color: white;
-}
-
-.menu_lateral_other {
-	display: flex;
-	justify-content: left;
-	gap: 20px;
-	align-items: center;
-	height: 80px;
-}
-
-.menu_lateral_other a {
-	text-decoration: none;
-	color: #fff;
-	margin-left: 30px;
-	border-right:solid 0.1px rgba(255, 255, 255, 0.277); 
-	padding-right: 25px;
-}
-
-.menu_lateral_other button {
-	border: none;
-	background-color: transparent;
-	color: white;
-	font-size: 16px;
-}
-
-.menu_carrinho {
-	width: 0px;
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	right: 0;
-	background-color: #22262c;
-	text-align: center;
-	overflow: hidden;
-}
-
-.menu_carrinho div button {
-	width: 400px;
-	text-align: center;
-	padding: 12px;
-	border-radius: 30px;
-	border: none;
-	background-color: #434750;
-	color: white;
-	position: absolute;
-	right: 20px;
-	top: 625px;
-	font-size: 16px;
-}
-
-.principal {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-	margin: 90px 0 0 0;
-	text-align: center;
-}
-
-.principal i {
-	font-size: 60px;
-}
-
-.principal p {
-	font-size: 20px;
-}
-
 footer {
 	width: 100%;
 	margin: 0 auto;
-	border-top: solid 1px var(--cor-texto-dark);
+	border-top: solid 1px var(--cor-texto-light);
 }
 
 footer a {
@@ -349,7 +197,7 @@ footer .footer_content .footer_social .social_media {
 }
 
 footer .footer_content .footer_social .social_media a {
-	color: white;
+	color: var(--cor-texto-light);
 }
 
 footer .footer_content .footer_links {
@@ -367,20 +215,20 @@ footer .footer_content .footer_links .links_rapidos {
 
 footer .footer_content .footer_links .links_rapidos a {
 	text-decoration: none;
-	color: white;
+	color: var(--cor-texto-light);
 }
 
 footer .footer_footer {
 	display: flex;
 	justify-content: space-between;
-	border-top: solid 0.5px white;
+	border-top: solid 0.5px #000000;
 	padding: 15px;
 	margin-bottom: 10px;
 }
 
 footer .footer_footer .rodape_esc .rodape_botao {
 	text-decoration: none;
-	color: white;
+	color: var(--cor-texto-light);
 }
 
 .title {
