--- a/src/assets/css/informations.css
+++ b/src/assets/css/informations.css
@@ -23,16 +23,16 @@
     border-radius: 10px;
 }
 
-.name_map {
-    text-align: center;
+.text_info {
+    padding: 100px;
 }
 
-.map {
-    text-align: center;
-    margin: 20px 0 30px 0;
+.logo_agradecimento {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.map_content {
-    width: 1200px;
-    height: 600px;
+.logo_branca {
+    width: 300px;
 }
