--- a/src/assets/css/loggedin_user.css
+++ b/src/assets/css/loggedin_user.css
@@ -1,21 +1,97 @@
-main{
+.lgd{
     display: flex;
 }
 
 .div1{
     display: flex;
-    width: 40%;
-    background-color: aqua;
+    width: 20%;
+    background-color: #DCDCDC;
+    flex-direction: column;
+    height: 100vh;
 }
 
 .user_name{
     display: flex;
+    background-color: #C0C0C0;
+    height: 100px;
+    align-items: center;
+    padding: 0 0 25px 50px;
+}
+
+.user_name h2{
+    font-size: 15px;
+}
+
+.user_name img{
+    width: 75px;
+    height: 75px;
+    margin-top: 25px;
+    border-radius: 50%;
+}
+
+.menu_bar{
+    display: flex;
     flex-direction: column;
+    gap: 50px;
+    font-size: 18px;
+    padding: 50px 0 0 20px;
+}
+
+.menu_bar div{
+    display: flex;
+    gap: 10px;
+}
+
+.menu_bar div img{
+    width: 20px;
+    height: 20px;
 }
 
 .div2{
     display: flex;
-    width: 60%;
+    width: 80%;
     min-height: 100vh;
-    background-color: blueviolet;
+    background-color: #fff;
+    flex-direction: column;
+    margin: 0;
+}
+
+.titulo{
+    background-color: #d3d2d9;
+    align-items: center;
+}
+
+.titulo h2{
+    text-align: left;
+}
+
+.div2 div h3{
+    font-size: 24px;
+    text-align: left;
+} 
+
+.plmdd{
+display: flex;
+gap: 50px;
+margin: 0 auto;
+}
+
+.plmdd img{
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+}
+
+.main_div2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    flex-direction: column;
+}
+
+.fgh{
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
 }
