--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -1,96 +1,84 @@
-.lgd{
+.user_bar{
     display: flex;
     flex-direction: column;
-}
-
-.div1{
-    display: flex;
+    background-color: #f5f5f5;
     width: 20%;
-    background-color: #DCDCDC;
-    flex-direction: column;
-    height: 100vh;
-    position: fixed;
 }
 
-.user_name{
+.user_icon{
     display: flex;
-    background-color: #C0C0C0;
-    height: 100px;
     align-items: center;
-    padding: 0 0 25px 50px;
+    padding: 20px;
+    border-bottom: solid 1px rgba(154, 148, 148, 0.588);
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
-.user_name h2{
-    font-size: 15px;
-}
-
-.user_name img{
-    width: 75px;
-    height: 75px;
-    margin-top: 25px;
-    border-radius: 50%;
+.icon{
+    font-size: 40px;
 }
 
 .menu_bar{
     display: flex;
     flex-direction: column;
-    gap: 50px;
-    font-size: 18px;
-    padding: 50px 0 0 20px;
+    padding: 12px;
+    margin: 5px;
 }
 
 .menu_bar div{
     display: flex;
+    align-items: center;
+    border-bottom:  solid 1px rgba(154, 148, 148, 0.588);
+}
+
+.main_service{
+    margin: 0 auto;
+    width: 80%;
+}
+
+.tittle_service{
+    background-color: #424a55b4;
+    display: block;
+    width: 100%;
+
+}
+
+.table{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.input_form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px 0 0 50px;
+}
+
+.input_form input{
+    width: 400px;
+    height: 30px;
+    background-color: #343842;
+    border: none;
+    border-radius: 12px;
+    color: white;
+    padding: 2px 5px ;
+    font-size: 19px;
+}
+
+.options{
+    display: flex;
     gap: 10px;
 }
 
-.menu_bar div img{
-    width: 20px;
-    height: 20px;
-}
-
-.div2{
-    margin-left: 20%;
-}
-
-.div2 div h3{
-    text-align:right ;
-    margin-right: 50px;
-    font-size: 50px;
-} 
-
-.plmdd{
-    display: flex;
-    width: 900px;
-    flex-direction: column;
-    box-shadow: 2px 2px 12px black;
-    margin-top: 50px;
-}
-
-.plmdd div img {
-    width: 300px;
-    height: 150px;
-    border-radius: 0;
-    object-fit: contain;
-    padding: 20px;
-}
-
-fieldset{
-    width: 900px;
-    text-align: center;
-    margin: 20px auto;
-    padding: 20px;
-}
-
-fieldset button{
-    padding: 10px;
-    border-radius: 10px;
+.options button{
     border: none;
-    background-color: #C0C0C0;
-}
-
-.tipo_produto{
-    width: 900px;
-    text-align: center;
-    margin-left: 20%;
+    width: 30px;
+    height: 30px;
+    background-color: #343842;
+    color: white;
+    border-radius: 5px;
 }
