--- a/src/assets/css/localization.css
+++ b/src/assets/css/localization.css
@@ -36,3 +36,42 @@
     width: 1200px;
     height: 600px;
 }
+
+.maps_info{
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.321);
+}
+
+.maps_info a{
+    display: flex;
+    width: 150px;
+    color: white;
+    text-decoration: none;
+    background-color: #2cd46b;
+    height: 20px;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    margin: auto 5px;
+}
+
+.maps_img{
+    display: flex;
+}
+
+.maps_img img{
+    width: 400px;
+    border-radius: 20px;
+    object-fit: cover;
+    padding: 10px;
+}
+
+.maps_desc{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 8px;
+}
